--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
 <p>新しいコメントは、表示されているコメントの最下部（「↑最新のコメント」と表記）に記入してください。</p>
 
 
-<p class="impression">青柳くんのコメント</p>
-<p class="impression">阿部くんのコメント</p>
+<p class="impression">卒業プロジェクト</p>
+<p class="impression">太田くんのコメント</p>
 <p class="impression">遠藤くんのコメント</p>
-<p class="impression">遠藤くんのコメント</p>
+<p class="impression">つじくんのコメント</p>
+<p class="impression">かずとくんのコメント</p>
 <p class="impression">Pull request (-_-)b </p>
 <p >↑最新のコメント</p>
 <h3>github情報など</h3>
